RESOLVED FIXED264568
createUIAlertController title gets truncated if too long
https://bugs.webkit.org/show_bug.cgi?id=264568
Summary createUIAlertController title gets truncated if too long
youenn fablet
Reported 2023-11-10 05:05:07 PST
Attachments
youenn fablet
Comment 1 2023-11-10 05:08:52 PST
EWS
Comment 2 2023-11-15 01:27:09 PST
Committed 270760@main (7753b1fdea4b): <https://commits.webkit.org/270760@main> Reviewed commits have been landed. Closing PR #20304 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.