createUIAlertController title gets truncated if too long https://bugs.webkit.org/show_bug.cgi?id=264568 rdar://116345923

Reviewed by Jean-Yves Avenard.

UIKit is truncating titles when they are long, which is probablematic for prompts.
We reuse the same workaround as Safari does for its own prompts.

* Source/WebKit/Platform/spi/ios/UIKitSPI.h:
* Source/WebKit/UIProcess/ios/UIKitUtilities.mm:
(WebKit::createUIAlertController):

Canonical link: https://commits.webkit.org/270760@main